--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@ async function updateDisplayText(areacode) {
     // IF authority data is found, then search the dataset for authority by area code
     if (aData) {
     const aName = areacode;
-    const aYear = document.getElementById('sliderValue');
+    const aYear = document.getElementById("mySlider").value
     extractAuthorityInfo(aName, aData, aYear);
     }
 }
