--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@ function extractAuthorityInfo(aName, aArray, aYear) {
     const year = aYear + aName + "_";;
     let authorityInfoFound = false;
 
-    console.log(aYear);
+    console.log(year);
 
     // Classes for each text variable
     const text = [".wellbeing",".community-richness",".voter",".library",".heritage",".hatecrime",".secure-livelihoods",".unemployment-benefits",".social-housing",".credit",".school-meals",".unemployment",".child-poverty",".annual-income",".income-housing",".homelessness",".home-ownership",".food-bank",".environmental-revitalisation",".fires",".traffc",".fly-tipping",".recycling",".noise",".distancetoparks",".learning",".ksschooling",".absenteeism",".youthtraining",".positive-connections",".obesity",".childobesity",".pregnancy",".expectancy",".medical",".services",".publictransport",".faith",".volunteering",".community-centres",".sports-centres"];
