--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@ async function fetchData(url) {
 
 function extractAuthorityInfo(aName, aArray, aYear) {
     const prefix = aName + "_";
-    const year = aYear + aName + "_";;
+    const year = aYear + aName + "_";
     let authorityInfoFound = false;
 
     console.log(year);
