--- a/index.html
+++ b/index.html
@@ -697,7 +697,8 @@ function extractAuthorityInfo(aName, aArray, aYear) {
         console.log(`${key.replace(prefix, '')}: ${authority[key]}`);
       });
 
-    }else if (authorityInfoFound == false){
+    }
+    if (authorityInfoFound == false){
         for (let i = 0; i < 34; i++) {
             const elements = document.querySelectorAll(text[i]);
                 elements.forEach(element => {
