--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@ async function fetchData(url) {
 /// PREFIX WILL NEED TO BE [YEAR+NAME+DATA]
 
 function extractAuthorityInfo(aName, aArray, aYear) {
-    const prefix = aYear + "_" + aName + "_";
+    const prefix = aName + "_";
     let authorityInfoFound = false;
 
     // Classes for each text variable
