--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@ async function fetchData(url) {
 
 /// PREFIX WILL NEED TO BE [YEAR+NAME+DATA]
 
-function extractAuthorityInfo(aName, aArray, aYear) {
+function extractAuthorityInfo(aName, aArray) {
     const prefix = aName + "_";
     let authorityInfoFound = false;
 
@@ -694,8 +694,8 @@ function extractAuthorityInfo(aName, aArray, aYear) {
       relevantKeys.forEach(key => {
         console.log(`${key.replace(prefix, '')}: ${authority[key]}`);
       });
-    } 
-    }
+  }
+}
 }
 
 // Main function to fetch data and extract authority information to display it
@@ -705,17 +705,17 @@ async function updateDisplayText(areacode) {
     // IF authority data is found, then search the dataset for authority by area code
     if (aData) {
     const aName = areacode;
-    extractAuthorityInfo(aName, aData, 2024);
+    extractAuthorityInfo(aName, aData);
     }
 }
 </script>
-    <script>
-        const slider = document.getElementById('mySlider');
-        const sliderValue = document.getElementById('sliderValue');
+<script>
+    const slider = document.getElementById('mySlider');
+    const sliderValue = document.getElementById('sliderValue');
 
-        slider.oninput = function() {
-            sliderValue.textContent = this.value;
-        }
-    </script>
+    slider.oninput = function() {
+        sliderValue.textContent = this.value;
+    }
+</script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQ_ISENaww2PHEZdrmCVhOwkL-uN6m_l4&callback=initMap" async defer></script>
 </html>
