--- a/index.html
+++ b/index.html
@@ -664,7 +664,42 @@ async function fetchData(url) {
 /// PREFIX WILL NEED TO BE [YEAR+NAME+DATA]
 
 
+    function extractAuthorityInfo(aName, aArray) {
+        const prefix = aName + "_";
+        let authorityInfoFound = false;
 
+        // Classes for each text variable
+        const text = [".wellbeing",".community-richness",".voter",".library",".heritage",".hatecrime",".secure-livelihoods",".unemployment-benefits",".social-housing",".credit",".school-meals",".unemployment",".child-poverty",".annual-income",".income-housing",".homelessness",".home-ownership",".food-bank",".environmental-revitalisation",".fires",".traffc",".fly-tipping",".recycling",".noise",".distancetoparks",".learning",".ksschooling",".absenteeism",".youthtraining",".positive-connections",".obesity",".childobesity",".pregnancy",".expectancy",".medical",".services",".publictransport",".faith",".volunteering",".community-centres",".sports-centres"];
+
+        // Values used to search through the JSON dataset
+        const values = [prefix+"wellbeing",prefix+"community-richness",prefix+"voter",prefix+"library",prefix+"heritage",prefix+"hatecrime",prefix+"secure-livelihoods",prefix+"unemployment-benefits",prefix+"social-housing",prefix+"credit",prefix+"school-meals",prefix+"unemployment",prefix+"child-poverty",prefix+"annual-income",prefix+"income-housing",prefix+"homelessness",prefix+"home-ownership",prefix+"food-bank",prefix+"environmental-revitalisation",prefix+"fires",prefix+"traffc",prefix+"fly-tipping",prefix+"recycling",prefix+"noise",prefix+"distancetoparks",prefix+"learning",prefix+"ksschooling",prefix+"absenteeism",prefix+"youthtraining",prefix+"positive-connections",prefix+"obesity",prefix+"childobesity",prefix+"pregnancy",prefix+"expectancy",prefix+"medical",prefix+"services",prefix+"publictransport",prefix+"faith",prefix+"volunteering",prefix+"community-centres",prefix+"sports-centres"];
+
+        // Display text that is paired with the value extracted from the JSON
+        const display = ["Wellbeing - "," ","Voter Turnout - ","Library Usage - ","Heritage - ","Crime (Hatecrimes) - ","","Unemployment Benefits - ","Social Housing - ","Credit Claimants - ","Free School Meals - ","Unemployment - ","Child Poverty - ","Annual Income - ","Income Housing - ","Homelessness - ","Home Ownership - ","Food Bank Usage - ","","Fires - ","Traffic Accidents - ","Fly-Tipping Reports - ","Recycling Rate - ","Noise Complaints - ","Distance To Parks - ","","KS Attainment - ","Absenteeism - ","Youth Training - ","","Obesity - ","Child Obesity - ","Teenage Pregnancy - ","Life Expectancy - ","NHS GP - ","","Public Transport - ","Faith Participation - ","Volunteering - ","Community Centre Users - ","Sports/Leisure Centre Users"];
+
+            // This section iterates through the relevant keys within the JSON and extracts the values of each
+            aArray.forEach(authority => {
+            const aKeys = Object.keys(authority);
+            const relevantKeys = aKeys.filter(key => key.startsWith(prefix));
+
+            if (relevantKeys.length > 0) {
+              authorityInfoFound = true;
+
+              for (let i = 0; i < relevantKeys.length; i++) {
+                const elements = document.querySelectorAll(text[i]);
+                elements.forEach(element => {
+                    const val = `${authority[relevantKeys.find(key => key.startsWith(values[i]))]}`;
+                    element.innerText = `${display[i]} ` + val;
+                });
+              }
+              relevantKeys.forEach(key => {
+                console.log(`${key.replace(prefix, '')}: ${authority[key]}`);
+              });
+            }
+        }
+    }
+          
+    
 // Main function to fetch data and extract authority information to display it
 async function updateDisplayText(areacode) {
     const aData = await fetchData(url);
