--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@ async function updateDisplayText(areacode) {
 /// PREFIX WILL NEED TO BE [YEAR+NAME+DATA]
 
 function extractAuthorityInfo(aName, aArray, aYear) {
-        const prefix = ayear + "_" + aName + "_";
+        const prefix = aYear + "_" + aName + "_";
         let authorityInfoFound = false;
 
         // Classes for each text variable
