--- a/index.html
+++ b/index.html
@@ -679,7 +679,8 @@ async function updateDisplayText(areacode) {
 function extractAuthorityInfo(aName, aArray, aYear) {
         const prefix = aYear + "_" + aName + "_";
         let authorityInfoFound = false;
-
+        console.log(prefix);
+        
         // Classes for each text variable
         const text = [".wellbeing",".community-richness",".voter",".library",".heritage",".hatecrime",".secure-livelihoods",".unemployment-benefits",".social-housing",".credit",".school-meals",".unemployment",".child-poverty",".annual-income",".income-housing",".homelessness",".home-ownership",".food-bank",".environmental-revitalisation",".fires",".traffc",".fly-tipping",".recycling",".noise",".distancetoparks",".learning",".ksschooling",".absenteeism",".youthtraining",".positive-connections",".obesity",".childobesity",".pregnancy",".expectancy",".medical",".services",".publictransport",".faith",".volunteering",".community-centres",".sports-centres"];
 
