--- a/index.html
+++ b/index.html
@@ -667,8 +667,8 @@ async function updateDisplayText(areacode) {
     if (aData) {
     console.log("FOUND");
     const aName = areacode;
-    const ayear = sliderValue;
-    extractAuthorityInfo(aName, aData, ayear);
+    const aYear = sliderValue;
+    extractAuthorityInfo(aName, aData, aYear);
     }
 }
 
