--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@ async function updateDisplayText(areacode) {
     if (aData) {
     console.log("FOUND");
     const aName = areacode;
-    const ayear =  = document.getElementById("mySlider").value; 
+    const ayear = document.getElementById("mySlider").value; 
     extractAuthorityInfo(aName, aData, ayear);
     }
 }
