--- a/index.html
+++ b/index.html
@@ -607,20 +607,37 @@ async function initMap() {
         map.fitBounds(bounds);
     });
 
-        // Add event listener for input change
-    input.addEventListener('input', function() {
-        // Get the current input value
-        var inputValue = input.value;
-        // Find the option in the datalist that matches the input value
-        var matchedOption = Array.from(datalist.options).find(function(option) {
-            return option.value === inputValue;
-        });
+    /// This section is the search feature, which draws from the dropdown element in the HTML
+    document.getElementById('dropdown-council').addEventListener('input', function() {
+    var searchTerm = document.getElementById('dropdown-council').value.trim();
 
-        // If a matching option is found, update the input value
-        if (matchedOption) {
-            input.value = matchedOption.value;
-            var selectedImageSrc = matchedOption.dataset.value;
-            changeAuthority(selectedImageSrc);
+    // Iterate through features to find the one with matching name property
+    map.data.forEach(function(feature) {
+        var featureName = feature.getProperty('LAD13CD'); 
+        if (featureName.toLowerCase() === searchTerm.toLowerCase()) {
+
+            updateDisplayText(featureName.toUpperCase());
+
+            if (selectedFeature) {
+                selectedFeature.setProperty("isColorful", false);
+            }
+            map.data.revertStyle();
+
+            selectedFeature = feature;
+
+            // Styling of the authority is overridden 
+            map.data.overrideStyle(feature, {
+                strokeWeight: 3, // Example: Increase stroke weight
+                strokeColor: 'black', // Example: Change stroke color
+                fillColor: 'purple'
+            });
+
+            // The view is focused on the selected authority
+            var bounds = new google.maps.LatLngBounds();
+            feature.getGeometry().forEachLatLng(function(latlng) {
+                bounds.extend(latlng);
+            });
+            map.fitBounds(bounds);
         }
     });
 
